nbbank/walle/01-01walle-mysql-deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: walle-mysql
  namespace: walle
  labels:
    app: walle-mysql
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: walle-mysql
    spec:
      terminationGracePeriodSeconds: 60
      containers:
      - name: walle-mysql
        image: mysql
        imagePullPolicy: Always
        command: ['--default-authentication-plugin=mysql_native_password']
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: lib
          mountPath: /var/lib/mysql
      volumes:
      - name: lib
        emptyDir: {}
