nbbank/walle/03-01walle-nginx-deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: walle-nginx
  labels:
    app: walle-nginx
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: walle-nginx
    spec:
      terminationGracePeriodSeconds: 60
      nodeSelector:
        deploy: app
      containers:
      - name: walle-nginx
        image: alenx/walle-web:2.0
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          name: http
