nbbank/walle/01-02walle-mysql-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: walle
spec:
  ports:
  - port: 3306
    targetPort: 3306
