nbbank/walle/02-02wall-python-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: python
  namespace: walle
spec:
  ports:
  - port: 5000
    targetPort: 5000
