nbbank/walle/03-02walle-nginx-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: walle-nginx
  namespace: walle
spec:
  selector:
    app: walle-nginx
  ports:
  - port: 80
    targetPort: 80
