nbbank/walle/04-02github-ep.yaml
kind: Endpoints
apiVersion: v1
metadata:
  name: github-svc
  namespace: walle
subsets:
  - addresses:
      - ip: 192.30.255.113
    ports:
      - port: 443
