nbbank/walle/04-03-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: github-svc
  namespace: walle
spec:
  ports:
  - port: 433
    targetPort: 433
